# Django-Template

./: .env  .env.example  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  LICENSE  docker-compose.yml  manage.py  nginx.conf  pyproject.toml  readme.md
apps/authentication/: __init__.py  admin.py  apps.py  models.py  serializers.py  signals.py  urls.py  views.py
apps/core/: __init__.py  auth.py  database.py  db.py  devtools.py  health.py  i18n.py  middleware.py  models.py  performance.py  views.py
apps/users/: __init__.py  admin.py  apps.py  models.py  urls.py
config/: api_docs.py  asgi.py  urls.py  wsgi.py
config/settings/: base.py  local.py  logging.py  pri.key  production.py  pub.key  test.py
deploy/: local.yml  nginx.conf  production.yml  uwsgi.ini
docker/: Dockerfile-bak  Dockerfile-base  Dockerfile-build  deploy.sh  docker-compose.yml  docker_deploy.sh  harbor.yml
docs/markdown/: 01_start.md
media/testFile/: inport_users.xls
pipe/: base.txt  local.txt  production.txt  requirements.txt
requirements/: base.txt  local.txt  production.txt
sql/: clean_script.sql  create_rbac.py  create_rbac_cu.py  init_base.py  init_rbac.py  random_rbac.py
templates/: first.html
utils/: adapters.py  apps.py  baseDRF.py  cache.py  custom.py  decorators.py  deployment.py  docs.py  error.py  exception.py  exceptions.py  handler.py  logging.py  middleware.py  pagination.py  permissions.py  response.py  security.py  serializer.py  serializers.py  settings.py  signals.py  tasks.py  testing.py  throttling.py  tools.py  utils.py  validators.py  views.py
(+41 files in other folders)
